--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     </head>
     <body>
         <script src="index.js"></script>
-
+        <h1 id="title">Jamopopper</h1>
+        <h3>Links to my socials!</h3>
+        <a href="https://bsky.app/profile/jamopopper.bsky.social"><img src="images/bsky_logo.gif" alt="BlueSky Logo"></a>
+        <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.gif" alt="YouTube Logo"></a>
+        <a href="https://github.com/jamopopper"><img src="images/github_logo.gif" alt="GitHub Logo"></a>
+    
     </body>
 </html>
