--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <script src="index.js"></script>
         <h1 id="title">Jamopopper</h1>
         <h3>Links to my socials!</h3>
-        <div class="image_flex">
+        <div>
             <a href="https://bsky.app/profile/jamopopper.bsky.social"><img src="images/bsky_logo.gif" alt="BlueSky Logo"></a>
             <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.gif" alt="YouTube Logo"></a>
             <a href="https://github.com/jamopopper"><img src="images/github_logo.gif" alt="GitHub Logo"></a>
