yahoo finall they are transparent

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <h1 id="title">Jamopopper</h1>
         <h3>Links to my socials!</h3>
         <div>
-            <a href="https://bsky.app/profile/jamopopper.bsky.social"><img src="images/bsky_logo.gif" alt="BlueSky Logo"></a>
-            <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.gif" alt="YouTube Logo"></a>
-            <a href="https://github.com/jamopopper"><img src="images/github_logo.gif" alt="GitHub Logo"></a>
+            <a href="https://bsky.app/profile/jamopopper.bsky.social"><img src="images/bsky_logo.png" alt="BlueSky Logo"></a>
+            <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.png" alt="YouTube Logo"></a>
+            <a href="https://github.com/jamopopper"><img src="images/github_logo.png" alt="GitHub Logo"></a>
         </div>
     </body>
 </html>
