he shmoves and stuff

--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
         <title>Jamopopper</title>
     </head>
     <body>
-        <script src="index.js"></script>
         <div class="image_flex">
             <a href="https://bsky.app/profile/jamopopper.bsky.social"><img src="images/bsky_logo.png" alt="BlueSky Logo"></a>
             <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.png" alt="YouTube Logo"></a>
             <a href="https://github.com/jamopopper"><img src="images/github_logo.png" alt="GitHub Logo"></a>
         </div>
+        <div class="yapper">
+            <img id="yapping_man" src="images/silent.png" alt="A silent lil guy">
+        </div>
+        <script src="index.js"></script>
+
     </body>
 </html>
