--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <title>Jamopopper</title>
     </head>
     <body>
+        <div class="speech_bubble">
+            <p></p>
+        </div>
         <div class="image_flex">
             <a href="https://bsky.app/profile/jamopopper.bsky.social"><img src="images/bsky_logo.png" alt="BlueSky Logo"></a>
             <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.png" alt="YouTube Logo"></a>
