--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <a href="https://github.com/jamopopper"><img src="images/github_logo.png" alt="GitHub Logo"></a>
         </div>
         <div class="yapper">
+            <img id="whoosh" src="images/whoosh.png" alt="The tail of the lil guy">
             <img onclick="interrupt_yapping()" id="yapping_man" src="images/silent.png" alt="A silent lil guy">
         </div>
         <script src="index.js"></script>
