--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <title>Jamopopper</title>
 </head>
 <body>
-    <div class="speech_bubble">
+    <div class="speech_bubble" style="display: none;">
         <p></p>
     </div>
     <div class="image_flex">
