--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="official.css" />
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon.ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon.ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon.ico/apple-icon-72x72.png">
@@ -26,10 +26,6 @@
     <title>Jamopopper Waterbottle</title>
 </head>
 <body>
-    <div class="yapper">
-        <img id="whoosh" src="images/whoosh.png" alt="The tail of the lil guy">
-        <img onclick="interrupt_yapping()" id="yapping_man" src="images/silent.png" alt="A silent lil guy">
-    </div>
     <h1>Welcome to the CSS Test Page</h1>
     <p>This is a paragraph. <strong>This text is bold.</strong> <em>This text is italic.</em></p>
     <p><a href="#">This is a link</a> to nowhere.</p>
