--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p></p>
     </div>
     <div class="image_flex">
-        <a href="https://bsky.app/profile/jamopopper.bsky.social"><img src="images/bsky_logo.png" alt="BlueSky Logo"></a>
+        <a href="https://bsky.app/profile/jamopopper.net"><img src="images/bsky_logo.png" alt="BlueSky Logo"></a>
         <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.png" alt="YouTube Logo"></a>
         <a href="https://github.com/jamopopper"><img src="images/github_logo.png" alt="GitHub Logo"></a>
     </div>
