yessir, adding more buttons

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <a href="https://bsky.app/profile/jamopopper.bsky.social"><img src="images/bsky_logo.png" alt="BlueSky Logo"></a>
         <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.png" alt="YouTube Logo"></a>
         <a href="https://github.com/jamopopper"><img src="images/github_logo.png" alt="GitHub Logo"></a>
+        <a href="https://jamopopper.t.me"><img src="images/telegram_logo.png" alt="Telegram Logo"></a>
+        <a href=""><img src="images/signal_logo.png" alt="Signal Logo"></a>
     </div>
     <div class="yapper">
         <img id="whoosh" src="images/whoosh.png" alt="The tail of the lil guy">
