--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="https://github.com/jamopopper"><img src="images/github_logo.png" alt="GitHub Logo"></a>
         <a href="https://bsky.app/profile/jamopopper.net"><img src="images/bsky_logo.png" alt="BlueSky Logo"></a>
         <a href="https://jamopopper.t.me"><img src="images/telegram_logo.png" alt="Telegram Logo"></a>
-        <a href=""><img src="images/signal_logo.png" alt="Signal Logo"></a>
+        <a href="https://signal.me/#eu/hu7r88gzZ4hJcgZyoKwUfaxeg8eRXPsEKeQF_Bhof4a-duxgLvhBvqAT5vFwqC8r"><img src="images/signal_logo.png" alt="Signal Logo"></a>
     </div>
     
     <script src="index.js"></script>
