bruh the resizing on this stuff is nuts

--- a/references/ref.html
+++ b/references/ref.html
@@ -30,7 +30,7 @@
     <br>
     <h2>Main Sheet</h2>
     <img src="/references/ref_sheet.png" alt="Reference Sheet of my fursona"
-        style="max-width: 1000px; border: 12px solid var(--polar-night-darkest);"/>
+        style="width: 95%; max-width: 1000px; border: 12px solid var(--polar-night-darkest);"/>
 
     <h2>Extra Images</h2>
     <div style="width: 100%; max-width: 1000px; margin: auto; display: table;">
