bruh deez font sizes man

--- a/references/ref.html
+++ b/references/ref.html
@@ -26,7 +26,7 @@
     <title>Jamopopper Ref Page</title>
 </head>
 <body>
-    <h1>Reference Images for Jamopoppepr</h1>
+    <h1>Reference Images for Jamopopper</h1>
     <br>
     <h2>Main Sheet</h2>
     <img src="/references/ref_sheet.png" alt="Reference Sheet of my fursona"
