--- a/test.html
+++ b/test.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
     <link rel="stylesheet" href="/official.css" />
+    <html prefix="og: https://ogp.me/ns#">
+    <meta property="og:title" content="A Test Page"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://jamopopper.net/test.html" />
+    <meta property="og:image" content="/images/favicon.ico/android-icon-192x192.png"/>
     <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon.ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon.ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.ico/apple-icon-72x72.png">
