got some changes to push to main

--- a/index.html
+++ b/index.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="light dark" />
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon.ico/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon.ico/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.ico/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon.ico/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon.ico/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon.ico/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon.ico/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon.ico/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon.ico/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/images/favicon.ico/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon.ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon.ico/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <title>Jamopopper</title>
-</head>
-<body>
-    <div class="speech_bubble" style="display: none;">
-        <p></p>
-    </div>
-    <div class="yapper">
-        <img id="whoosh" src="images/whoosh.png" alt="The tail of the lil guy">
-        <img onclick="interrupt_yapping()" id="yapping_man" src="images/silent.png" alt="A silent lil guy">
-    </div>
-    <div class="image_flex">
-        <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.png" alt="YouTube Logo"></a>
-        <a href="https://github.com/jamopopper"><img src="images/github_logo.png" alt="GitHub Logo"></a>
-        <a href="https://bsky.app/profile/jamopopper.net"><img src="images/bsky_logo.png" alt="BlueSky Logo"></a>
-        <a href="https://jamopopper.t.me"><img src="images/telegram_logo.png" alt="Telegram Logo"></a>
-        <a href="https://signal.me/#eu/hu7r88gzZ4hJcgZyoKwUfaxeg8eRXPsEKeQF_Bhof4a-duxgLvhBvqAT5vFwqC8r"><img src="images/signal_logo.png" alt="Signal Logo"></a>
-    </div>
-    
-    <script src="index.js"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="color-scheme" content="light dark" />
+        <link rel="stylesheet" href="/index.css" />
+        <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon.ico/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon.ico/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.ico/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon.ico/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon.ico/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon.ico/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon.ico/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon.ico/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon.ico/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/images/favicon.ico/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.ico/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon.ico/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon.ico/favicon-16x16.png">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
+        <title>Jamo's Lil Forest</title>
+    </head>
 
-</body>
+    <body>
+        <div class="speech_bubble" style="display: none;">
+            <p></p>
+        </div>
+
+        <div class="yapper">
+            <img id="whoosh" src="images/whoosh.png" alt="The tail of the lil guy">
+            <img onclick="interrupt_yapping()" id="yapping_man" src="images/silent.png" alt="A silent lil guy">
+        </div>
+
+        <div class="image_flex">
+            <a href="https://www.youtube.com/@jamopopper"><img src="images/yt_logo.png" alt="YouTube Logo"></a>
+            <a href="https://github.com/jamopopper"><img src="images/github_logo.png" alt="GitHub Logo"></a>
+            <a href="https://bsky.app/profile/jamopopper.net"><img src="images/bsky_logo.png" alt="BlueSky Logo"></a>
+            <a href="https://jamopopper.t.me"><img src="images/telegram_logo.png" alt="Telegram Logo"></a>
+            <a href="https://signal.me/#eu/hu7r88gzZ4hJcgZyoKwUfaxeg8eRXPsEKeQF_Bhof4a-duxgLvhBvqAT5vFwqC8r"><img src="images/signal_logo.png" alt="Signal Logo"></a>
+        </div>
+
+        <script src="index.js"></script>
+    </body>
 </html>
