--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="A Test Page"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://jamopopper.net/test.html" />
-    <meta property="og:image" content="/images/favicon.ico/android-icon-192x192.png"/>
+    <meta property="og:image" content="/images/sitting_on_log_waving.jpg"/>
     <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon.ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon.ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.ico/apple-icon-72x72.png">
