oops forgot to change the urls and images links in the OG tags

--- a/references/ref.html
+++ b/references/ref.html
@@ -9,8 +9,8 @@
     <html prefix="og: https://ogp.me/ns#">
     <meta property="og:title" content="Jamo's Reference Sheet Page"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://jamopopper.net/refernces/ref_preview.png" />
-    <meta property="og:image" content="/images/sitting_on_log_waving.jpg"/>
+    <meta property="og:url" content="https://jamopopper.net/references/ref.html" />
+    <meta property="og:image" content="/references/ref_sheet_preview.png"/>
     <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon.ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon.ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.ico/apple-icon-72x72.png">
