just changing the title fo the page

--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <title>Jamopopper Waterbottle</title>
+    <title>Testing Things</title>
 </head>
 <body>
     <h1>Welcome to the CSS Test Page</h1>
