i now understand why it was tweakin, plus the ref preview image is now on the ref page

--- a/references/ref.html
+++ b/references/ref.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Jamo's Reference Sheet Page"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://ref.jamopopper.net" />
-    <meta property="og:image" content="/references/ref_sheet_preview.png"/>
+    <meta property="og:image" content="https://jamopopper.net/references/ref_sheet_preview.png"/>
     <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon.ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon.ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.ico/apple-icon-72x72.png">
@@ -51,6 +51,10 @@
             </div>
         </div>
     </div>
+
+    <h2>Color Pallete</h2>
+    <img src="/references/ref_sheet_preview.png" alt="Reference Sheet of my fursona, but only the hex values for the colors"
+        style="object-fit: cover; width: 95%; max-width: 1000px; height: 50vw; border: 12px solid var(--polar-night-darkest);"/>
 
 </body>
 </html>
