staging some css changes, home page link changes, and new 404 page

--- a/not_found_page.html
+++ b/not_found_page.html
@@ -5,7 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="color-scheme" content="light dark" />
-        <link rel="stylesheet" href="/index.css" />
+        <link rel="stylesheet" href="/official.css" />
+        <html prefix="og: https://ogp.me/ns#">
+        <meta property="og:title" content="Lost your way?"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:url" content="https://jamopopper.net/not_found_page.html" />
+        <meta property="og:image" content="/images/favicon.ico/android-icon-192x192.png"/>
         <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon.ico/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon.ico/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon.ico/apple-icon-72x72.png">
@@ -22,27 +27,17 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
-        <title>Jamo's Lil Forest</title>
+        <title>Lost Your Way?</title>
     </head>
 
     <body>
-        <div class="speech_bubble" style="display: none;">
-            <p></p>
-        </div>
 
-        <div class="yapper">
-            <img id="whoosh" src="/images/whoosh.png" alt="The tail of the lil guy">
-            <img onclick="interrupt_yapping()" id="yapping_man" src="/images/silent.png" alt="A silent lil guy">
-        </div>
+        <h1>Error 404</h1>
+        <h3>Page not found</h3>
 
-        <div class="image_flex">
-            <a href="https://www.youtube.com/@jamopopper"><img src="/images/yt_logo.png" alt="YouTube Logo"></a>
-            <a href="https://github.com/jamopopper"><img src="/images/github_logo.png" alt="GitHub Logo"></a>
-            <a href="https://bsky.app/profile/jamopopper.net"><img src="/images/bsky_logo.png" alt="BlueSky Logo"></a>
-            <a href="https://jamopopper.t.me"><img src="/images/telegram_logo.png" alt="Telegram Logo"></a>
-            <a href="https://signal.me/#eu/hu7r88gzZ4hJcgZyoKwUfaxeg8eRXPsEKeQF_Bhof4a-duxgLvhBvqAT5vFwqC8r"><img src="/images/signal_logo.png" alt="Signal Logo"></a>
-        </div>
+        <h3>To go to the main page, <a href="/">click here</a></h3>
 
-        <script src="/index.js"></script>
+        <img src="/images/favicon.ico/android-icon-192x192.png" alt="angery little man" style="max-width: 50%; max-height: 50%; position: relative; bottom: 0;">
+
     </body>
 </html>
