boom, best error page

--- a/not_found_page.html
+++ b/not_found_page.html
@@ -7,7 +7,7 @@
         <meta name="color-scheme" content="light dark" />
         <link rel="stylesheet" href="/official.css" />
         <html prefix="og: https://ogp.me/ns#">
-        <meta property="og:title" content="Lost your way?"/>
+        <meta property="og:title" content="Got Lost?"/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://jamopopper.net/not_found_page.html" />
         <meta property="og:image" content="/images/favicon.ico/android-icon-192x192.png"/>
@@ -27,17 +27,25 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
-        <title>Lost Your Way?</title>
+        <title>Got lost?</title>
     </head>
 
     <body>
 
-        <h1>Error 404</h1>
-        <h3>Page not found</h3>
+        <h1>Error 404
+            <div style="font-weight: lighter; font-size: 0.2em;">
+                <br>
+            </div>
+            <div style="font-weight: lighter; font-size: 0.5em;">
+                Page not found
+            </div>
+        </h1>
 
-        <h3>To go to the main page, <a href="/">click here</a></h3>
+        <br>
 
-        <img src="/images/favicon.ico/android-icon-192x192.png" alt="angery little man" style="max-width: 50%; max-height: 50%; position: relative; bottom: 0;">
+        <h2>To go to the main page, <a href="/">click here</a></h2>
+
+        <img src="/images/favicon.ico/android-icon-192x192.png" alt="angery little man" style="max-width: 50%; max-height: 50%; position: absolute; bottom: 0; right: 50%; transform: translateX(50%); margin: 0; z-index: -1;">
 
     </body>
 </html>
