--- a/not_found_page.html
+++ b/not_found_page.html
@@ -45,7 +45,9 @@
 
         <h2>To go to the main page, <a href="/">click here</a></h2>
 
-        <img src="/images/favicon.ico/android-icon-192x192.png" alt="angery little man" style="max-width: 50%; max-height: 50%; position: absolute; bottom: 0; right: 50%; transform: translateX(50%); margin: 0; z-index: -1;">
+        <img src="/images/favicon.ico/android-icon-192x192.png" alt="angery little man" 
+        style="position: absolute; bottom: 0; right: 50%; transform: translateX(50%); 
+        margin: 0; z-index: -1; max-width: 50%; max-height: 50%; border-radius: 0;">
 
     </body>
 </html>
