page descriptions added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
+        <meta name="description" content="Hello! You found my forest filled with links to everything I do! Come and see what you're missing out on!">
         <title>Jamo's Lil Forest</title>
     </head>
 
