--- a/test.html
+++ b/test.html
@@ -27,6 +27,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Hello! You found my CSS test page! Everything on here right now is for testing purposes and does not meaningfully reflect anything about me.">
     <title>Jamopopper Waterbottle</title>
 </head>
 <body>
