--- a/not_found_page.html
+++ b/not_found_page.html
@@ -27,6 +27,7 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
+        <meta name="description" content="Oops! You tried to go to a page that doesn't exist!">
         <title>Got lost?</title>
     </head>
 
