--- a/not_found_page.html
+++ b/not_found_page.html
@@ -28,10 +28,13 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <meta name="description" content="Oops! You tried to go to a page that doesn't exist!">
+        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
         <title>Got lost?</title>
     </head>
 
     <body>
+
+        <div class="cf-turnstile" data-sitekey="0x4AAAAAAA2_BgKLBzzlyzb-" data-theme="light"></div>
 
         <h1>Error 404
             <div style="font-weight: lighter; font-size: 0.2em;">
