--- a/test.html
+++ b/test.html
@@ -28,9 +28,12 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="Hello! You found my CSS test page! Everything on here right now is for testing purposes and does not meaningfully reflect anything about me.">
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
     <title>Jamopopper Waterbottle</title>
 </head>
 <body>
+    <div class="cf-turnstile" data-sitekey="0x4AAAAAAA2_BgKLBzzlyzb-" data-theme="light"></div>
+
     <h1>Welcome to the CSS Test Page</h1>
     <p>This is a paragraph. <strong>This text is bold.</strong> <em>This text is italic.</em></p>
     <p><a href="#">This is a link</a> to nowhere.</p>
