tracking added to ref page

--- a/references/ref.html
+++ b/references/ref.html
@@ -28,9 +28,13 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Hey there! This is the reference page for my fursona, Jamopopper! It includes the Reference Sheet, extra images, and a color palette.">
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
     <title>Jamopopper Ref Page</title>
 </head>
 <body>
+    <div class="cf-turnstile" data-sitekey="0x4AAAAAAA2_BgKLBzzlyzb-" data-theme="light"></div>
+
     <h1>Reference Images for Jamopopper</h1>
     <br>
     <h2>Main Sheet</h2>
