new error gif and changing the reference in the 404 page

--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
 
         <h2>To go to the main page, <a href="/">click here</a></h2>
 
-        <img src="/images/favicon.ico/android-icon-192x192.png" alt="angery little man" 
+        <img src="/images/cat-wow.png" alt="angery little man" 
         style="position: absolute; bottom: 0; right: 50%; transform: translateX(50%); 
         margin: 0; z-index: -1; max-width: 50%; max-height: 50%; border-radius: 0;">
 
