--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
         <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon.ico/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon.ico/favicon-16x16.png">
         <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="/images/favicon.ico/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <meta name="description" content="Oops! You tried to go to a page that doesn't exist!">
         <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
